# cmake version
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
# project name
PROJECT(QPDocker)

# libs output path
SET(BUILD_LIBS  ${PROJECT_SOURCE_DIR}/../../build/libs)
# exec output path
SET(BUILD_BIN  ${PROJECT_SOURCE_DIR}/../../build/bin)

# deps dir
SET(DEPS_QP_CORE ../QPCore)

SET(CMAKE_INSTALL_PREFIX /usr)
# debug
#SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/../../auto_build/packet)

# sources dir
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}  SRC_ROOT)
AUX_SOURCE_DIRECTORY(${DEPS_QP_CORE}  SRC_QP_CORE)
AUX_SOURCE_DIRECTORY(${DEPS_QP_CORE}/qp_tiny_stack  SRC_QP_TINY_STACK)

# headers dir
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}  ${DEPS_QP_CORE})

# set libs output path
SET(LIBRARY_OUTPUT_PATH  ${BUILD_LIBS})
# set exec output path
#SET(EXECUTABLE_OUTPUT_PATH  ${BUILD_BIN})

# add flag or definitions
ADD_DEFINITIONS(-W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64  -std=c++11)

# lib target
ADD_LIBRARY(output_shared  SHARED  ${SRC_ROOT} ${SRC_QP_CORE} ${SRC_QP_TINY_STACK})
TARGET_LINK_LIBRARIES(output_shared  pthread dl)
SET_TARGET_PROPERTIES(output_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
SET_TARGET_PROPERTIES(output_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(output_static  STATIC  ${SRC_ROOT} ${SRC_QP_CORE} ${SRC_QP_TINY_STACK})
TARGET_LINK_LIBRARIES(output_static  pthread dl)
SET_TARGET_PROPERTIES(output_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
SET_TARGET_PROPERTIES(output_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

# exec target
#ADD_EXECUTABLE(${PROJECT_NAME}  ${SRC_ROOT} ${SRC_QP_CORE} ${SRC_QP_TINY_STACK})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME}  pthread dl)
