# cmake version
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
# project name
PROJECT(qpP2P)

# libs output path
SET(BUILD_LIBS  ${PROJECT_SOURCE_DIR}/../../build/libs)
# exec output path
SET(BUILD_BIN  ${PROJECT_SOURCE_DIR}/../../build/bin)
# deps dir
SET(DEPS_DIR ../qpCore)

# sources dir
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}  SRC_LIST1)
AUX_SOURCE_DIRECTORY(${DEPS_DIR}  SRC_LIST2)
# headers dir
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}  ${DEPS_DIR})

# set libs output path
SET(LIBRARY_OUTPUT_PATH  ${BUILD_LIBS})
# set exec output path
#SET(EXECUTABLE_OUTPUT_PATH  ${BUILD_BIN})

# add flag or definitions
ADD_DEFINITIONS(-W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64  -std=c++11)

# lib target
ADD_LIBRARY(output_shared  SHARED  ${SRC_LIST1} ${SRC_LIST2})
TARGET_LINK_LIBRARIES(output_shared  pthread)
SET_TARGET_PROPERTIES(output_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
SET_TARGET_PROPERTIES(output_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(output_static  STATIC  ${SRC_LIST1} ${SRC_LIST2})
TARGET_LINK_LIBRARIES(output_static  pthread)
SET_TARGET_PROPERTIES(output_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
SET_TARGET_PROPERTIES(output_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

# exec target
#ADD_EXECUTABLE(${PROJECT_NAME}  ${SRC_LIST1} ${SRC_LIST2})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME}  pthread)
